fix(*): fix styling on mobile

--- a/app/packs/styles/layout.scss
+++ b/app/packs/styles/layout.scss
@@ -11,6 +11,12 @@ body {
     flex-direction: column;
 }
 
+#user-main {
+    @include bs.media-breakpoint-down(sm) {
+        margin-top: calc( bs.$topbar-height + env(safe-area-inset-top));
+    }
+}
+
 #hidden-reviews .review {
     background-color: bs.$gray-200;
 }
@@ -61,7 +67,7 @@ main {
     .nav i {
         @extend .h4;
         @extend .mb-0;
-        color: #D3D3D3;
+        color: bs.$navbar-icon-colour;
     }
 
     a.nav-link {
@@ -114,7 +120,7 @@ main {
 }
 
 #topbar {
-    background-color: bs.$accordion-bg;
+    @extend .bg-primary;
     // IOS Safe Area
     padding-top: calc(#{bs.$navbar-padding-y} + env(safe-area-inset-top));
 
@@ -128,7 +134,8 @@ main {
 
     // Formatting for the inbox button on the topbar
     ul.nav {
-        @extend .text-primary;
+
+        @extend .text-light;
 
         span {
             @extend .d-none;
@@ -136,12 +143,16 @@ main {
 
         i {
             @extend .h1;
+            color: bs.$navbar-icon-colour;
         }
 
         .nav-link {
             @extend .p-0;
-            @extend .link-dark;
         }
+    }
+
+    .dropdown-toggle {
+        color: bs.$navbar-icon-colour;
     }
 }
 
